--- a/Build a Survey Form/index.html
+++ b/Build a Survey Form/index.html
@@ -11,62 +11,48 @@
 
 <body>
     <div class="container">
-        <header class="header">
-            <h2 id="title">freeCodeCamp Survey Form</h2>
-            <p id="description">Thank you for taking the time to help us improve the platform</p>
-        </header>
-        <form id="servey-form">
+        <div class="header">
+            <h2>freeCodeCamp Survey Form</h2>
+            <p>Thank you for taking the time to help us improve the platform</p>
+        </div>
+        <form>
             <div class="form-group">
-                <label for="name" id="name-label">Name</label>
-                <input id="name" type="text" placeholder="Enter Your Name" required>
+                <label for="name">Name</label>
+                <input id="name" type="text" placeholder="Enter your Name">
             </div>
             <div class="form-group">
-                <label for="email" id="email-label">Email</label>
-                <input id="email" type="email" placeholder="Enter Your Email" required>
+                <label for="email">Eamil</label>
+                <input id="email" type="email" placeholder="Enter your Email">
             </div>
             <div class="form-group">
-                <label for="number" id="number-label">Age <small>(optional)</small></label>
-                <input id="number" type="number" placeholder="Enter Your Age" min="10" max="28">
+                <label for="number">Age<small>(Optional)</small></label>
+                <input id="number" type="number" placeholder="Enter your Age">
             </div>
             <div class="form-group">
-                <p>Which option best describes your current role?</p>
-                <select id="dropdown">
-                    <option disabled>Select your current role</option>
-                    <option >Student</option>
-                    <option >Full-time</option>
-                    <option >Part-time</option>
-                    <option >Other</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <p>Would you recommend freeCodeCamp to a friend?</p>
-                <label><input type="radio" name="choice" value="Definitely">Definitely</label>
-                <label><input type="radio" name="choice" value="Maybe">May be</label>
-                <label><input type="radio" name="choice" value="Not-sure">Not Sure</label>
-            </div>
-            <div class="form-group">
-                <p>What is your favorite feature of freeCodeCamp?</p>
+                <label>Which option best describes your current role?</label>
                 <select>
-                    <option disabled>Select an option</option>
-                    <option>Open Sourse</option>
-                    <option>Free</option>
-                    <option>Challenger</option>
+                    <option disabled selected>Select current role</option>
+                    <option>Student</option>
+                    <option>Other</option>
                 </select>
             </div>
             <div class="form-group">
-                <p>What would you like to see improved? <small>(Check all that apply)</small></p>
-                <label><input type="checkbox" name="choose" value="Front-end-Projects">Front-end Projects</label>
-                <label><input type="checkbox" name="choose" value="Back-end-Projects">Back-end Projects</label>
-                <label><input type="checkbox" name="choose" value="Open-Source-Community">Open Source Community</label>
-                <label><input type="checkbox" name="choose" value="More-courses">More courses</label>
+                <label>Would you recommend freeCodeCamp to a friend?</label>
+                <label><input type="radio" class="input">May be</label>
+                <label><input type="radio" class="input">Not sure</label>
             </div>
             <div class="form-group">
-                <p>Any comments or suggestions?</p>
-                <textarea id="comments" placeholder="Enter your comment..."></textarea>
+                <label>Would you like to see improved?<small>(Check all that apply)</small> </label>
+                <label><input type="checkbox" class="input">Front End</label>
+                <label><input type="checkbox" class="input">Back End</label>
+                <label><input type="checkbox" class="input">Data Visualization</label>
             </div>
-            <div class="form-group">
-                <button type="submit">Submit</button>
+            <div class="from-group">
+                <label>Any comments or suggestions?</label>
+                <textarea placeholder="Enter your comment here ..." rows="30"></textarea>
             </div>
+            <button type="submit">Submit</button>
+
         </form>
     </div>
 </body>
